other learning algos

--- a/Malicious and Benign Websites.ipynb
+++ b/Malicious and Benign Websites.ipynb
@@ -6869,7 +6869,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> A Naive Bayes classifier is a probabilistic machine learning model that’s used for classification task. The primary issue for Naive Bayes is that the predictors have to "
+    "> A Naive Bayes classifier is a probabilistic machine learning model that’s used for classification task. The primary issue for Naive Bayes is that the predictors have to be independent whilst in lots of use cases they aren't.\n",
+    "\n",
+    "For this model, we will setup a Gaussian Naive Bayes Model since our values are continuous."
    ]
   },
   {
@@ -7043,20 +7045,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear SVM"
+    "## Decision Trees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Given a data of attributes together with its classes, a decision tree produces a sequence of rules that can be used to classify the data. Note an issue of DTs is that they might create complex DTs that overfit the data.\n",
+    "\n",
+    "For this model: Instead of coding the for-loop like above, we will try to use a GridSearch for the best hyperparameter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 {'max_depth': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import tree\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "parameters = {'max_depth':range(3,20)}\n",
+    "clf = GridSearchCV(tree.DecisionTreeClassifier(), parameters, n_jobs=4)\n",
+    "clf.fit(X_train, y_train)\n",
+    "tree_model = clf.best_estimator_\n",
+    "print (clf.best_score_, clf.best_params_) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Accuracy: 1.000\n",
+      "    Precision: 1.000\n",
+      "    Recall: 1.000\n",
+      "    AUC: 1.000\n",
+      "    F1 Score: 1.000\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "t_pred = tree_model.predict(X_test)\n",
+    "evaluate_model(true_classes, t_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 100% scores across all metrics are fishy and perhaps someone with more expertise could explain...."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear SVM\n",
+    "\n",
+    "> This learning algorithm draws a decision boundary between classes. New examples are then mapped into that same space and predicted to belong to a category based on which side of the gap they fall.\n",
+    "\n",
+    "Below, I will simply pick my hyperparameters instead of running it through a GridSearch / RandomSearch due to the computationally expensive nature of the task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Accuracy: 0.961\n",
+      "    Precision: 0.718\n",
+      "    Recall: 0.727\n",
+      "    AUC: 0.860\n",
+      "    F1 Score: 0.821\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "svm_model = SVC(kernel=\"linear\", C=0.025, random_state=42)\n",
     "svm_model.fit(X_train, y_train)\n",
     "svm_pred = svm_model.predict(X_test)\n",
     "evaluate_model(true_classes, svm_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As seen, the Linear SVM might have the best `Accuracy` and, in general, the best trade off between `Precision` and `Recall` across all other models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "In conclusion, ignoring the metrics for Decision Trees, a Linear Single Vector Machine might fare the best regarding metrics across the board whilst a Naive Bayes model might be a competitive choice due to its highest `recall` score."
    ]
   },
   {
